--- a/src/screens/HomeScreen.css
+++ b/src/screens/HomeScreen.css
@@ -7,6 +7,16 @@
   }
 
 
+  .container {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
   @media only screen and (max-width: 730px) {
     .HomeScreen {
       justify-content: space-between;
@@ -14,6 +24,16 @@
       flex-direction: column;
       margin-top: 40px;
       height: 60%;
+    }
+
+    .container {
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+  
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
     }
 
 }
