--- a/src/components/ForecastComp.css
+++ b/src/components/ForecastComp.css
@@ -36,12 +36,12 @@
   position: absolute;
 }
 
-.sevenDaysForecast::-webkit-scrollbar {
+.forecastComp::-webkit-scrollbar {
   display: none;
 }
 
 @media only screen and (max-width: 730px) {
-  .sevenDaysForecast {
+  .forecastComp {
     margin-top: 30px;
   }
 
