--- a/src/components/HourlyComp.css
+++ b/src/components/HourlyComp.css
@@ -56,7 +56,7 @@
   @media only screen and (max-width: 730px) {
 
 
-  .hourlyContainer {
+  .hourlyComp {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
