--- a/src/components/BottomNavbarComp.css
+++ b/src/components/BottomNavbarComp.css
@@ -15,6 +15,23 @@
     align-items: center;
   }
 
+  .hours{
+    background-color: yellow;
+  }
+
+  .nohours{
+    background-color: none;
+  }
+
+  .days{
+    background-color: yellow;
+  }
+
+  .nodays{
+    background-color: none;
+  }
+
+
   @media only screen and (max-width: 730px) {
     
     .bottomNavbarComp {
