--- a/src/components/HourlyComp.css
+++ b/src/components/HourlyComp.css
@@ -8,6 +8,10 @@
     padding: 10px;
     text-align: center;
   }
+
+  .hourlyComp .title{
+    font-weight: bold;
+  }
   
   .hourlyForecast {
     display: flex;
@@ -38,8 +42,9 @@
     font-size: 12px;
   }
   .hourlyTemp {
-    margin-top: 5px;
-    font-size: 16px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 500;
     position: relative;
     margin-right: 10px;
   }
@@ -100,8 +105,9 @@
     font-size: 14px;
   }
   .hourlyTemp {
-    margin-top: 5px;
-    font-size: 20px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    
     position: relative;
   }
 
