--- a/src/components/WeatherComp.css
+++ b/src/components/WeatherComp.css
@@ -9,10 +9,11 @@
   width: 50%;
   border-radius: 5px;
   margin-right: 50px;
+  margin-top: 20px;
 }
 .locationContainer{
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 700;
 }
 .dtContainer {
   display: flex;
@@ -22,12 +23,8 @@
 
 .dtContainer .time {
   font-size: 14px;
-  
+  font-weight: 400;
   margin-top: 5px;
-}
-
-.dtContainer .date {
-  font-size: 14px;
 }
 
 .tempContainer {
@@ -46,7 +43,7 @@
 
 .tempContainer .temp {
   font-size: 60px;
-  font-weight: 500;
+  font-weight: bold;
   position: relative;
 }
 
@@ -61,6 +58,7 @@
 
 .tempContainer .symbol {
   font-size: 25px;
+  font-weight: bold;
   position: absolute;
 }
 
@@ -86,6 +84,7 @@
     width: 100%;
     border-radius: 5px;
     margin-right: 50px;
+    margin-top: 0px;
   }
 
   .weatherIcon img {
