--- a/src/components/HourlyComp.css
+++ b/src/components/HourlyComp.css
@@ -44,7 +44,7 @@
   .hourlyTemp {
     margin-bottom: 5px;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: bold;
     position: relative;
     margin-right: 10px;
   }
@@ -72,7 +72,7 @@
     border-radius: 5px;
     background-color: rgba(210, 214, 249, 0.233);
     padding: 10px;
-    margin-top: 30px;
+    margin-top: 20px;
     text-align: center;
   }
 
