--- a/src/components/BottomNavbarComp.css
+++ b/src/components/BottomNavbarComp.css
@@ -18,6 +18,7 @@
   .active{
     background-color: rgba(7, 7, 7, 0.158);
     border-radius: 5px;
+    transition: all 0.5s ease-out;
     padding: 10px 10px;
     font-weight: bold;
     
